# voxerra

./: .gitignore  CMakeLists.txt
dependencies/include/FastNoiseLite/: FastNoiseLite.h
dependencies/include/GLFW/: glfw3.h  glfw3native.h
dependencies/include/KHR/: khrplatform.h
dependencies/include/glad/: glad.h
dependencies/include/glm/: common.hpp
dependencies/include/glm/detail/: type_quat.inl
dependencies/include/glm/ext/: matrix_projection.hpp  matrix_projection.inl
dependencies/include/imgui/: imconfig.h  imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imstb_textedit.h  imstb_truetype.h
dependencies/include/spdlog/: async_logger.h
dependencies/include/spdlog/fmt/bundled/: format.h
dependencies/include/spdlog/sinks/: rotating_file_sink-inl.h  rotating_file_sink.h
dependencies/source/glad/: glad.c
dependencies/source/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
source/: main.cpp
source/core/: ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  Shader.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
source/core/application/: Application.cpp  Application.h  application.cpp  application.h
source/core/debuggui/: DebugGui.cpp  DebugGui.h
source/core/elementbuffer/: elementbuffer.cpp  elementbuffer.h
source/core/gui/: gui.cpp  gui.h
source/core/shader/: shader.cpp  shader.h
source/core/shaders/: block.vert  cube.vert  light.vert  vertex.glsl
source/core/utils/: Utils.cpp  Utils.h  utils.cpp  utils.h
source/core/vertexarray/: vertexarray.cpp  vertexarray.h
source/core/vertexbuffer/: vertexbuffer.cpp  vertexbuffer.h
source/core/window/: Window.cpp  Window.h  window.cpp  window.h
source/game/: Camera.cpp  Camera.h  Vertex.cpp  Vertex.h
source/game/block/: Block.cpp  Block.h  BlockType.h  blocktype.h
source/game/camera/: Camera.cpp  Camera.h  camera.cpp  camera.h
source/game/chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
source/game/worldgen/chunk/: Chunk.cpp  Chunk.h  chunk.cpp  chunk.h
source/game/worldgen/chunkmanager/: ChunkManager.cpp  ChunkManager.h  chunkmanager.cpp  chunkmanager.h
source/game/worldgen/mesh/: Mesh.cpp  Mesh.h  mesh.cpp  mesh.h  vertex.h
source/utils/: enums.h  random.cpp  random.h  vert.cpp  vert.h
source/world-gen/: block.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h
source/worldgen/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Mesh.cpp  Mesh.h  block.cpp  block.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  EBO.cpp  EBO.h  Shader.cpp  Shader.h  VAO.h  VBO.cpp  VBO.h  WeaponClass.cpp  WeaponClass.h  glad.c  indi.cpp  indi.h  main.cpp  vert.cpp  vert.h
src/core/: ElementBuffer.cpp  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  main.cpp
src/core/glad/: glad.c
src/core/shaders/: cube.frag  cube.vert  default.vert  vertex.glsl
src/game/: Camera.cpp  Camera.h
src/items/: ArmorClass.cpp  ArmorClass.h  WeaponClass.cpp  WeaponClass.h
src/utils/: Random.cpp  Random.h  enums.h  vert.cpp  vert.h
src/vectors/: vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/world-generation/: Chunk.cpp  Chunk.h  ChunkManager.h  block.cpp  block.h  heightGenerator.cpp  heightGenerator.h
